--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                 <a href="#" onclick="abrirHistoricoPedidos()"
                   ><i class="fa-solid fa-list-ul"></i> Meus Pedidos</a
                 >
+                <a
+                  id="admin-link"
+                  href="admin.html"
+                  target="_blank"
+                  style="display: none; color: var(--color-gold)"
+                >
+                  <i class="fa-solid fa-user-gear"></i> Painel Admin
+                </a>
                 <a href="#" onclick="logout()"
                   ><i class="fa-solid fa-right-from-bracket"></i> Sair</a
                 >
