--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,9 @@
       <section id="panel-menu" class="panel-section">
         <div class="header-section">
           <h2>Gerenciar Cardápio</h2>
-          <button class="btn-primary">+ Novo Produto</button>
+          <button class="btn-primary" onclick="openProductModal()">
+            + Novo Produto
+          </button>
         </div>
         <table>
           <thead>
@@ -106,7 +108,226 @@
     </main>
 
     <div id="toast-container"></div>
+    <div id="modal-product-admin" class="modal-overlay">
+      <div class="modal-content auth-content" style="max-width: 500px">
+        <div class="header-section" style="margin-bottom: 20px">
+          <h3 style="color: white; margin: 0">Novo Produto</h3>
+          <button
+            class="close-modal"
+            style="position: static"
+            onclick="closeProductModal()"
+          >
+            &times;
+          </button>
+        </div>
 
+        <div class="modal-body">
+          <form id="form-add-product">
+            <div class="form-group" style="text-align: center">
+              <div
+                id="preview-container"
+                style="
+                  width: 120px;
+                  height: 120px;
+                  background: #333;
+                  border-radius: 8px;
+                  margin: 0 auto 10px;
+                  overflow: hidden;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                "
+              >
+                <i
+                  class="fa-solid fa-image"
+                  style="font-size: 2rem; color: #555"
+                  id="preview-icon"
+                ></i>
+                <img
+                  id="preview-img"
+                  src=""
+                  style="
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: none;
+                  "
+                />
+              </div>
+              <label
+                for="prod-file"
+                class="btn-outline btn-small"
+                style="cursor: pointer"
+                >Escolher Foto</label
+              >
+              <input
+                type="file"
+                id="prod-file"
+                accept="image/*"
+                style="display: none"
+              />
+              <input type="hidden" id="prod-image-url" />
+            </div>
+
+            <div class="form-row">
+              <div class="form-group" style="flex: 2">
+                <label>Nome</label>
+                <input
+                  type="text"
+                  id="prod-name"
+                  required
+                  placeholder="Ex: Super Bacon"
+                />
+              </div>
+              <div class="form-group" style="flex: 1">
+                <label>Preço (R$)</label>
+                <input
+                  type="number"
+                  id="prod-price"
+                  step="0.01"
+                  required
+                  placeholder="0.00"
+                />
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>Categoria</label>
+              <select
+                id="prod-category"
+                style="
+                  width: 100%;
+                  padding: 10px;
+                  background: #111;
+                  border: 1px solid #444;
+                  color: #fff;
+                  border-radius: 5px;
+                "
+              >
+                <option value="Lanche">Lanche</option>
+                <option value="Combo">Combo</option>
+                <option value="Bebida">Bebida</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label>Descrição</label>
+              <textarea
+                id="prod-desc"
+                rows="2"
+                placeholder="Ingredientes..."
+              ></textarea>
+            </div>
+
+            <div
+              class="form-group"
+              style="
+                border-top: 1px solid #333;
+                padding-top: 15px;
+                margin-top: 15px;
+              "
+            >
+              <label
+                style="
+                  color: var(--color-gold);
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                "
+              >
+                Personalização / Opções
+                <button
+                  type="button"
+                  class="btn-small"
+                  onclick="addDetailRow()"
+                  style="background: #333; color: white"
+                >
+                  + Adicionar
+                </button>
+              </label>
+
+              <div style="font-size: 0.8rem; color: #666; margin-bottom: 10px">
+                Formato: <i>Nome do item</i> ou <i>Nome - Preço</i> (Ex: Bacon -
+                3.00)
+              </div>
+
+              <div
+                id="details-container"
+                style="display: flex; flex-direction: column; gap: 10px"
+              ></div>
+            </div>
+
+            <button
+              type="submit"
+              class="btn-primary full-width"
+              style="margin-top: 15px"
+            >
+              Cadastrar Produto
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div id="modal-security" class="modal-overlay" style="z-index: 4000">
+      <div
+        class="modal-content auth-content"
+        style="max-width: 400px; height: auto; min-height: auto"
+      >
+        <div
+          class="header-section"
+          style="
+            margin-bottom: 15px;
+            border-bottom: 1px solid #333;
+            padding-bottom: 10px;
+          "
+        >
+          <h3 style="color: #e74c3c; margin: 0">
+            <i class="fa-solid fa-triangle-exclamation"></i> Ação Crítica
+          </h3>
+          <button
+            class="close-modal"
+            style="position: static"
+            onclick="closeSecurityModal()"
+          >
+            &times;
+          </button>
+        </div>
+
+        <div class="modal-body">
+          <p style="color: #ccc; margin-bottom: 15px; font-size: 0.95rem">
+            Você está prestes a excluir um produto permanentemente. Para
+            confirmar, digite a <strong>Senha Mestra</strong>:
+          </p>
+          <input
+            type="password"
+            id="security-pass"
+            placeholder="Senha de segurança"
+            style="
+              width: 100%;
+              padding: 12px;
+              background: #111;
+              border: 1px solid #444;
+              color: white;
+              border-radius: 5px;
+              font-size: 1rem;
+            "
+          />
+        </div>
+
+        <div class="modal-footer" style="justify-content: flex-end; gap: 10px">
+          <button class="btn-outline" onclick="closeSecurityModal()">
+            Cancelar
+          </button>
+          <button
+            class="btn-primary"
+            style="background-color: #e74c3c; border-color: #e74c3c"
+            onclick="executarDelecao()"
+          >
+            <i class="fa-solid fa-trash"></i> Excluir Agora
+          </button>
+        </div>
+      </div>
+    </div>
     <script type="module" src="js/admin.js"></script>
   </body>
 </html>
