--- a/index.html
+++ b/index.html
@@ -326,6 +326,39 @@
                   <input type="text" id="troco-for" placeholder="Ex: 50,00" />
                 </div>
               </div>
+              <div
+                class="coupons-section"
+                style="
+                  margin-top: 20px;
+                  border-top: 1px solid #333;
+                  padding-top: 15px;
+                "
+              >
+                <h4 style="color: var(--color-gold); margin-bottom: 15px">
+                  🎟️ Cupons de Desconto
+                </h4>
+
+                <div id="coupons-container" class="coupons-grid">
+                  <p style="color: #666; font-size: 0.9rem">
+                    Carregando ofertas...
+                  </p>
+                </div>
+
+                <div
+                  id="discount-display"
+                  style="
+                    display: none;
+                    margin-top: 10px;
+                    text-align: right;
+                    color: var(--color-gold);
+                  "
+                >
+                  Desconto aplicado:
+                  <span id="discount-value" style="font-weight: bold"
+                    >- R$ 0,00</span
+                  >
+                </div>
+              </div>
 
               <div class="form-group">
                 <label for="message">Mensagem / Observações</label>
