--- a/index.html
+++ b/index.html
@@ -555,6 +555,18 @@
               placeholder="******"
             />
           </div>
+          <div style="text-align: right; margin-top: 5px">
+            <a
+              href="reset.html"
+              style="
+                font-size: 0.85rem;
+                color: var(--color-gold);
+                text-decoration: none;
+              "
+            >
+              Esqueceu sua senha?
+            </a>
+          </div>
           <button type="submit" class="btn-primary full-width">Entrar</button>
         </form>
         <form id="form-register" class="auth-form">
