--- a/index.html
+++ b/index.html
@@ -315,6 +315,20 @@
                       Dinheiro</span
                     >
                   </label>
+                  <label class="payment-option">
+                    <input
+                      type="radio"
+                      name="paymentMethod"
+                      value="mercadopago"
+                    />
+                    <span
+                      class="payment-box"
+                      style="border-color: #009ee3; color: #009ee3"
+                    >
+                      <i class="fa-solid fa-hand-holding-dollar"></i> Pagar
+                      Online (MP)
+                    </span>
+                  </label>
                 </div>
 
                 <div
