--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,9 @@
         <button onclick="switchPanel('config')">
           <i class="fa-solid fa-sliders"></i> Configurações
         </button>
+        <button onclick="switchPanel('delivery')">
+          <i class="fa-solid fa-motorcycle"></i> Entrega
+        </button>
         <button class="logout-btn" onclick="adminLogout()">
           <i class="fa-solid fa-right-from-bracket"></i> Sair
         </button>
@@ -108,6 +111,45 @@
           </div>
         </div>
       </section>
+
+      <section id="panel-delivery" class="panel-section">
+        <div class="header-section">
+          <h2>Taxas de Entrega</h2>
+          <div style="display: flex; gap: 10px">
+            <input
+              type="text"
+              id="new-bairro-name"
+              placeholder="Nome do Bairro"
+              style="
+                padding: 8px;
+                border-radius: 4px;
+                border: 1px solid #444;
+                background: #222;
+                color: white;
+              "
+            />
+            <input
+              type="number"
+              id="new-bairro-price"
+              placeholder="R$ Taxa"
+              step="0.50"
+              style="
+                width: 100px;
+                padding: 8px;
+                border-radius: 4px;
+                border: 1px solid #444;
+                background: #222;
+                color: white;
+              "
+            />
+            <button class="btn-primary" onclick="adicionarBairro()">
+              + Adicionar
+            </button>
+          </div>
+        </div>
+        <div id="delivery-list" class="grid-list"></div>
+      </section>
+
       <section id="panel-config" class="panel-section">
         <div class="header-section">
           <h2>Configurações do Sistema</h2>
