--- a/admin.html
+++ b/admin.html
@@ -10,13 +10,17 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/admin.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <nav class="sidebar">
       <div class="admin-logo"><i class="fa-solid fa-user-gear"></i> Painel</div>
       <div class="sidebar-menu">
+        <button class="active" onclick="switchPanel('kitchen')">
+          <i class="fa-solid fa-fire-burner"></i> Pedidos
+        </button>
         <button class="active" onclick="switchPanel('orders')">
-          <i class="fa-solid fa-receipt"></i> Pedidos
+          <i class="fa-solid fa-receipt"></i> Historico
         </button>
         <button onclick="switchPanel('menu')">
           <i class="fa-solid fa-burger"></i> Cardápio
@@ -30,6 +34,9 @@
         <button onclick="switchPanel('delivery')">
           <i class="fa-solid fa-motorcycle"></i> Entrega
         </button>
+        <button onclick="switchPanel('reports')">
+          <i class="fa-solid fa-chart-line"></i> Relatórios
+        </button>
         <button class="logout-btn" onclick="adminLogout()">
           <i class="fa-solid fa-right-from-bracket"></i> Sair
         </button>
@@ -37,15 +44,53 @@
     </nav>
 
     <main class="main-content">
-      <section id="panel-orders" class="panel-section active">
+      <section id="panel-kitchen" class="panel-section active">
         <div class="header-section">
-          <h2>Pedidos do Dia</h2>
-          <button class="btn-outline" onclick="carregarPedidosAdmin()">
-            <i class="fa-solid fa-rotate"></i> Atualizar
+          <h2>Fila de Produção</h2>
+          <button class="btn-outline" onclick="carregarCozinha()">
+            <i class="fa-solid fa-rotate"></i>
           </button>
         </div>
+
+        <div class="kitchen-container">
+          <div class="kitchen-column">
+            <div class="kitchen-header header-espera">
+              <i class="fa-regular fa-clock"></i> Aguardando Confirmação
+            </div>
+            <div id="queue-waiting" class="kitchen-list"></div>
+          </div>
+
+          <div class="kitchen-column">
+            <div class="kitchen-header header-preparo">
+              <i class="fa-solid fa-fire"></i> Em Preparo
+            </div>
+            <div id="queue-prep" class="kitchen-list"></div>
+          </div>
+          <div class="kitchen-column">
+            <div class="kitchen-header header-entrega">
+              <i class="fa-solid fa-motorcycle"></i> Em Entrega
+            </div>
+            <div id="queue-delivery" class="kitchen-list"></div>
+          </div>
+        </div>
+      </section>
+      <section id="panel-orders" class="panel-section">
+        <div class="header-section">
+          <h2>Histórico de Pedidos</h2>
+          <div style="display: flex; gap: 10px">
+            <button class="btn-primary btn-small" onclick="abrirModalFiltro()">
+              <i class="fa-solid fa-filter"></i> Filtrar
+            </button>
+            <button
+              class="btn-outline btn-small"
+              onclick="carregarPedidosAdmin()"
+            >
+              <i class="fa-solid fa-rotate"></i> Atualizar
+            </button>
+          </div>
+        </div>
         <div id="admin-orders-list" class="orders-grid">
-          <p>Carregando...</p>
+          <p>Selecione um filtro ou clique em atualizar.</p>
         </div>
       </section>
 
@@ -111,6 +156,94 @@
           </div>
         </div>
       </section>
+      <section id="panel-reports" class="panel-section">
+        <div class="header-section">
+          <h2>Painel Financeiro</h2>
+          <div style="display: flex; gap: 10px">
+            <button
+              class="btn-primary btn-small"
+              onclick="aplicarFiltroRelatorio()"
+            >
+              Gerar Relatório
+            </button>
+            <button
+              class="btn-primary btn-small"
+              onclick="abrirModalFiltroRelatorio()"
+            >
+              <i class="fa-solid fa-filter"></i> Filtrar
+            </button>
+            <button class="btn-outline btn-small" onclick="carregarDashboard()">
+              <i class="fa-solid fa-rotate"></i> Atualizar
+            </button>
+          </div>
+        </div>
+
+        <p id="report-period-label" style="color: #666; margin-bottom: 15px">
+          Mostrando últimos 30 dias
+        </p>
+
+        <div style="display: flex; gap: 20px; margin-bottom: 30px">
+          <div
+            class="admin-order-card"
+            style="flex: 1; text-align: center; padding: 20px"
+          >
+            <h3 style="color: #aaa; font-size: 1rem">Faturamento (R$)</h3>
+            <div
+              id="stat-faturamento"
+              style="
+                font-size: 2rem;
+                color: var(--color-gold);
+                font-weight: bold;
+              "
+            >
+              R$ 0,00
+            </div>
+          </div>
+          <div
+            class="admin-order-card"
+            style="flex: 1; text-align: center; padding: 20px"
+          >
+            <h3 style="color: #aaa; font-size: 1rem">Pedidos Concluídos</h3>
+            <div
+              id="stat-qtd"
+              style="font-size: 2rem; color: #2ecc71; font-weight: bold"
+            >
+              0
+            </div>
+          </div>
+        </div>
+
+        <div class="admin-order-card" style="padding: 20px">
+          <canvas id="salesChart" style="width: 100%; height: 300px"></canvas>
+        </div>
+      </section>
+
+      <div id="modal-dossier" class="modal-overlay" style="z-index: 6000">
+        <div class="modal-content auth-content" style="max-width: 600px">
+          <div class="header-section">
+            <h3 style="color: white; margin: 0">
+              <i class="fa-solid fa-magnifying-glass"></i> Dossiê do Pedido
+            </h3>
+            <button
+              class="close-modal"
+              style="position: static"
+              onclick="fecharDossie()"
+            >
+              &times;
+            </button>
+          </div>
+          <div
+            id="dossier-body"
+            class="modal-body"
+            style="font-family: monospace; color: #ccc; line-height: 1.4"
+          ></div>
+          <div class="modal-footer">
+            <button class="btn-primary full-width" onclick="window.print()">
+              Imprimir Prova
+            </button>
+          </div>
+        </div>
+      </div>
 
       <section id="panel-delivery" class="panel-section">
         <div class="header-section">
@@ -164,6 +297,9 @@
           </button>
           <button class="config-tab-btn" onclick="switchConfigTab('users')">
             <i class="fa-solid fa-users"></i> Usuários
+          </button>
+          <button class="config-tab-btn" onclick="switchConfigTab('schedule')">
+            <i class="fa-solid fa-clock"></i> Horários
           </button>
         </div>
 
@@ -260,6 +396,33 @@
                   </tr>
                 </thead>
                 <tbody id="users-list-body"></tbody>
+              </table>
+            </div>
+          </div>
+
+          <div
+            id="config-schedule"
+            class="config-subpanel"
+            style="display: none"
+          >
+            <div class="subpanel-header">
+              <h3>Horário de Funcionamento</h3>
+              <button class="btn-primary btn-small" onclick="salvarHorarios()">
+                Salvar Alterações
+              </button>
+            </div>
+
+            <div class="table-responsive">
+              <table class="admin-table">
+                <thead>
+                  <tr>
+                    <th>Dia</th>
+                    <th>Abertura</th>
+                    <th>Fechamento</th>
+                    <th>Fechado?</th>
+                  </tr>
+                </thead>
+                <tbody id="schedule-list-body"></tbody>
               </table>
             </div>
           </div>
@@ -378,23 +541,41 @@
               </div>
             </div>
 
-            <div class="form-group">
-              <label>Categoria</label>
-              <select
-                id="prod-category"
-                style="
-                  width: 100%;
-                  padding: 10px;
-                  background: #111;
-                  border: 1px solid #444;
-                  color: #fff;
-                  border-radius: 5px;
-                "
-              >
-                <option value="Lanche">Lanche</option>
-                <option value="Combo">Combo</option>
-                <option value="Bebida">Bebida</option>
-              </select>
+            <div class="form-row">
+              <div class="form-group" style="flex: 1">
+                <label>Categoria</label>
+                <select
+                  id="prod-category"
+                  style="
+                    width: 100%;
+                    padding: 10px;
+                    background: #111;
+                    border: 1px solid #444;
+                    color: #fff;
+                    border-radius: 5px;
+                  "
+                >
+                  <option value="Lanche">Lanche</option>
+                  <option value="Combo">Combo</option>
+                  <option value="Bebida">Bebida</option>
+                </select>
+              </div>
+              <div class="form-group" style="flex: 1">
+                <label>Estoque (Opcional)</label>
+                <input
+                  type="number"
+                  id="prod-stock"
+                  placeholder="Vazio = Infinito"
+                  style="
+                    width: 100%;
+                    padding: 10px;
+                    background: #111;
+                    border: 1px solid #444;
+                    color: white;
+                    border-radius: 5px;
+                  "
+                />
+              </div>
             </div>
 
             <div class="form-group">
@@ -538,6 +719,248 @@
             Clique em uma imagem para selecioná-la.
           </p>
           <div id="cloud-grid" class="gallery-grid"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="modal-filter-orders" class="modal-overlay" style="z-index: 4500">
+      <div class="modal-content auth-content" style="max-width: 500px">
+        <div class="header-section">
+          <h3 style="color: white; margin: 0">Filtrar Pedidos</h3>
+          <button
+            class="close-modal"
+            style="position: static"
+            onclick="fecharModalFiltro()"
+          >
+            &times;
+          </button>
+        </div>
+
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Período</label>
+            <select
+              id="filter-period"
+              style="
+                width: 100%;
+                padding: 10px;
+                background: #111;
+                border: 1px solid #444;
+                color: white;
+                border-radius: 5px;
+              "
+              onchange="toggleDatasManuais()"
+            >
+              <option value="hoje" selected>Hoje</option>
+              <option value="mes">Este Mês</option>
+              <option value="ano">Este Ano</option>
+              <option value="todos">Todo o Histórico</option>
+              <option value="manual">Personalizado (Datas)</option>
+            </select>
+          </div>
+
+          <div
+            id="filter-dates-row"
+            class="form-row"
+            style="display: none; margin-top: 10px"
+          >
+            <div class="form-group" style="flex: 1">
+              <label>De:</label>
+              <input
+                type="date"
+                id="filter-start"
+                style="
+                  padding: 8px;
+                  background: #222;
+                  border: 1px solid #444;
+                  color: white;
+                  width: 100%;
+                "
+              />
+            </div>
+            <div class="form-group" style="flex: 1">
+              <label>Até:</label>
+              <input
+                type="date"
+                id="filter-end"
+                style="
+                  padding: 8px;
+                  background: #222;
+                  border: 1px solid #444;
+                  color: white;
+                  width: 100%;
+                "
+              />
+            </div>
+          </div>
+
+          <hr style="border-color: #333; margin: 20px 0" />
+
+          <div class="form-group">
+            <label>Nome do Cliente</label>
+            <input
+              type="text"
+              id="filter-name"
+              placeholder="Ex: João"
+              style="
+                width: 100%;
+                padding: 10px;
+                background: #111;
+                border: 1px solid #444;
+                color: white;
+              "
+            />
+          </div>
+
+          <div class="form-row">
+            <div class="form-group" style="flex: 1">
+              <label>Método Pagamento</label>
+              <select
+                id="filter-payment"
+                style="
+                  width: 100%;
+                  padding: 10px;
+                  background: #111;
+                  border: 1px solid #444;
+                  color: white;
+                "
+              >
+                <option value="">Todos</option>
+                <option value="pix">Pix</option>
+                <option value="credit_card">Cartão de Crédito</option>
+                <option value="debit_card">Cartão de Débito</option>
+                <option value="cash">Dinheiro</option>
+                <option value="mercadopago">Mercado Pago</option>
+              </select>
+            </div>
+            <div class="form-group" style="flex: 1">
+              <label>ID do Pedido</label>
+              <input
+                type="number"
+                id="filter-id"
+                placeholder="Ex: 50"
+                style="
+                  width: 100%;
+                  padding: 10px;
+                  background: #111;
+                  border: 1px solid #444;
+                  color: white;
+                "
+              />
+            </div>
+          </div>
+
+          <button class="btn-primary full-width" onclick="aplicarFiltros()">
+            Aplicar Filtros
+          </button>
+          <button
+            class="btn-outline full-width"
+            style="margin-top: 10px"
+            onclick="limparFiltros()"
+          >
+            Limpar Filtros
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div id="modal-filter-reports" class="modal-overlay" style="z-index: 4600">
+      <div class="modal-content auth-content" style="max-width: 400px">
+        <div class="header-section">
+          <h3 style="color: white; margin: 0">Filtrar Relatório</h3>
+          <button
+            class="close-modal"
+            style="position: static"
+            onclick="fecharModalFiltroRelatorio()"
+          >
+            &times;
+          </button>
+        </div>
+
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Período</label>
+            <select
+              id="rep-period"
+              style="
+                width: 100%;
+                padding: 10px;
+                background: #111;
+                border: 1px solid #444;
+                color: white;
+                border-radius: 5px;
+              "
+              onchange="toggleDatasRelatorio()"
+            >
+              <option value="hoje" selected>Hoje</option>
+              <option value="semana">Esta Semana</option>
+              <option value="mes">Este Mês</option>
+              <option value="manual">Personalizado</option>
+            </select>
+          </div>
+
+          <div
+            id="rep-dates-row"
+            class="form-row"
+            style="display: none; margin-top: 10px"
+          >
+            <div class="form-group" style="flex: 1">
+              <label>De:</label>
+              <input
+                type="date"
+                id="rep-start"
+                style="
+                  padding: 8px;
+                  background: #222;
+                  border: 1px solid #444;
+                  color: white;
+                  width: 100%;
+                "
+              />
+            </div>
+            <div class="form-group" style="flex: 1">
+              <label>Até:</label>
+              <input
+                type="date"
+                id="rep-end"
+                style="
+                  padding: 8px;
+                  background: #222;
+                  border: 1px solid #444;
+                  color: white;
+                  width: 100%;
+                "
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label>Método Pagamento</label>
+            <select
+              id="rep-payment"
+              style="
+                width: 100%;
+                padding: 10px;
+                background: #111;
+                border: 1px solid #444;
+                color: white;
+              "
+            >
+              <option value="">Todos</option>
+              <option value="pix">Pix</option>
+              <option value="credit_card">Cartão de Crédito</option>
+              <option value="debit_card">Cartão de Débito</option>
+              <option value="cash">Dinheiro</option>
+              <option value="mercadopago">Mercado Pago</option>
+            </select>
+          </div>
+
+          <button
+            class="btn-primary full-width"
+            onclick="aplicarFiltroRelatorio()"
+          >
+            Gerar Relatório
+          </button>
         </div>
       </div>
     </div>
