--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
     <div id="modal-auth" class="modal-overlay">
       <div class="modal-content auth-content">
         <button class="close-modal" onclick="closeAuthModal()">&times;</button>
+
         <div class="auth-tabs">
           <button class="tab-btn active" onclick="switchAuthTab('login')">
             Login
@@ -564,41 +565,93 @@
             Cadastro
           </button>
         </div>
-        <form id="form-login" class="auth-form active">
-          <h3>Bem-vindo de volta!</h3>
+
+        <form id="form-magic-login" class="auth-form" style="display: block">
+          <h3>Entrar sem Senha</h3>
+          <p style="color: #ccc; font-size: 0.9rem; text-align: center">
+            Digite seu e-mail. Enviaremos um link mágico para você entrar na
+            hora.
+          </p>
+
           <div class="form-group">
-            <label>Email</label
-            ><input
+            <label>Email</label>
+            <input
               type="email"
-              name="email"
+              id="magic-email"
               required
               placeholder="seu@email.com"
             />
           </div>
+
+          <button type="submit" class="btn-primary full-width">
+            Receber Link
+          </button>
+
+          <div style="text-align: center; margin-top: 15px">
+            <span style="color: #888; font-size: 0.9rem"
+              >Já tem uma senha definida?</span
+            ><br />
+            <a
+              href="#"
+              onclick="toggleLoginMode('password')"
+              style="
+                color: var(--color-gold);
+                font-size: 0.9rem;
+                text-decoration: none;
+              "
+            >
+              Entrar com Senha
+            </a>
+          </div>
+        </form>
+
+        <form id="form-password-login" class="auth-form" style="display: none">
+          <h3>Login com Senha</h3>
+
           <div class="form-group">
-            <label>Senha</label
-            ><input
+            <label>Email</label>
+            <input
+              type="email"
+              id="login-email"
+              required
+              placeholder="seu@email.com"
+            />
+          </div>
+
+          <div class="form-group">
+            <label>Senha</label>
+            <input
               type="password"
-              name="password"
+              id="login-password"
               required
               placeholder="******"
             />
           </div>
-          <div style="text-align: right; margin-top: 5px">
+
+          <button type="submit" class="btn-primary full-width">Entrar</button>
+
+          <div
+            style="
+              display: flex;
+              justify-content: space-between;
+              margin-top: 15px;
+              font-size: 0.9rem;
+            "
+          >
             <a
-              href="reset.html"
-              style="
-                font-size: 0.85rem;
-                color: var(--color-gold);
-                text-decoration: none;
-              "
+              href="#"
+              onclick="toggleLoginMode('magic')"
+              style="color: var(--color-gold); text-decoration: none"
             >
-              Esqueceu sua senha?
+              <i class="fa-solid fa-arrow-left"></i> Voltar para Link Mágico
+            </a>
+            <a href="reset.html" style="color: #ccc; text-decoration: none">
+              Esqueci a senha
             </a>
           </div>
-          <button type="submit" class="btn-primary full-width">Entrar</button>
         </form>
-        <form id="form-register" class="auth-form">
+
+        <form id="form-register" class="auth-form" style="display: none">
           <h3>Crie sua conta</h3>
           <div class="form-group">
             <label>Nome</label
