--- a/index.html
+++ b/index.html
@@ -677,6 +677,7 @@
               name="password"
               required
               placeholder="******"
+              oninput="mostrarForcaSenha(this.value, 'reg-strength')"
             />
             <small id="reg-strength" class="password-strength"></small>
           </div>
