--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="assets/favicon.webp" type="image/webp" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.min.js"></script>
     <meta name="theme-color" content="#d93025" />
   </head>
 
@@ -819,34 +820,114 @@
               display: none;
               margin-top: 20px;
               border-top: 1px solid #333;
-              padding-top: 15px;
+              padding-top: 20px;
             "
           >
-            <h4 style="color: var(--color-gold); margin-bottom: 10px">
-              Novo Endereço
-            </h4>
-            <div class="form-row">
-              <div class="form-group" style="flex: 3">
-                <input type="text" id="new-street" placeholder="Rua" required />
-              </div>
-              <div class="form-group" style="flex: 1">
-                <input type="text" id="new-number" placeholder="Nº" required />
-              </div>
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 15px;
+              "
+            >
+              <h4 style="color: var(--color-gold); margin: 0">Novo Endereço</h4>
+              <small style="color: #666; font-size: 0.8rem"
+                >Preencha os dados abaixo</small
+              >
             </div>
-            <div class="form-row">
-              <div class="form-group">
+
+            <div
+              class="form-row"
+              style="display: flex; gap: 10px; margin-bottom: 10px"
+            >
+              <div class="form-group" style="flex: 3">
                 <input
                   type="text"
-                  id="new-neighbor"
-                  placeholder="Bairro"
+                  id="new-street"
+                  placeholder="Rua / Avenida"
                   required
+                  style="
+                    width: 100%;
+                    padding: 12px;
+                    background: var(--color-black);
+                    border: 1px solid #444;
+                    border-radius: 5px;
+                    color: white;
+                  "
                 />
               </div>
-              <div class="form-group">
-                <input type="text" id="new-comp" placeholder="Comp." />
+              <div class="form-group" style="flex: 1">
+                <input
+                  type="text"
+                  id="new-number"
+                  placeholder="Nº"
+                  required
+                  style="
+                    width: 100%;
+                    padding: 12px;
+                    background: var(--color-black);
+                    border: 1px solid #444;
+                    border-radius: 5px;
+                    color: white;
+                  "
+                />
               </div>
             </div>
-            <button type="submit" class="btn-primary full-width">
+
+            <div
+              class="form-row"
+              style="display: flex; gap: 10px; margin-bottom: 15px"
+            >
+              <div class="form-group" style="flex: 1">
+                <select
+                  id="new-bairro-select"
+                  required
+                  style="
+                    width: 100%;
+                    height: 45px;
+                    padding: 0 12px;
+                    background-color: var(--color-black);
+                    border: 1px solid #444;
+                    border-radius: 5px;
+                    color: #aaa;
+                    cursor: pointer;
+                  "
+                >
+                  <option value="" disabled selected>
+                    Selecionar Bairro...
+                  </option>
+                </select>
+              </div>
+
+              <div class="form-group" style="flex: 1">
+                <input
+                  type="text"
+                  id="new-comp"
+                  placeholder="Complemento (Opc.)"
+                  style="
+                    width: 100%;
+                    height: 45px;
+                    padding: 12px;
+                    background: var(--color-black);
+                    border: 1px solid #444;
+                    border-radius: 5px;
+                    color: white;
+                  "
+                />
+              </div>
+            </div>
+
+            <button
+              type="submit"
+              class="btn-primary full-width"
+              style="
+                height: 45px;
+                font-weight: bold;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+              "
+            >
               Salvar Endereço
             </button>
           </form>
